# librarian

./: .gitignore  LICENSE  Makefile  README.md  metadata.json  pyproject.toml
.github/workflows/: test.yml
librarian/: cli.py  settings.py
librarian/collections/books/: cli.py  constants.py  service.py
librarian/collections/vinyl/: cli.py  service.py
librarian/integrations/: discogs.py  genius.py  openlibrary.py
librarian/integrations/discogs/: __init__.py  data.py  service.py
librarian/integrations/genius/: __init__.py  data.py  service.py
librarian/integrations/openlibrary/: __init__.py  data.py  service.py
librarian/utils/: database.py  http_client.py
tests/: conftest.py  discogs_responses.py  genius_responses.py  openlibrary_responses.py  test_cli.py
tests/collections/books/: conftest.py  test_cli.py  test_service.py
tests/collections/vinyl/: test_service.py
tests/integrations/: test_discogs.py  test_genius.py  test_openlibrary.py
tests/integrations/discogs/: discogs_responses.py  test_data.py  test_service.py
tests/integrations/genius/: genius_responses.py  test_data.py  test_service.py
tests/integrations/openlibrary/: openlibrary_responses.py  test_data.py  test_service.py
tests/utils/: test_http_client.py
