[tool.poetry]
name = "librarian"
version = "0.1.0"
description = ""
authors = ["Myles Braithwaite <me@mylesbraithwaite.com>"]
readme = "README.md"
packages = [{include = "librarian"}]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
datasette = "^0.64.1"
datasette-publish-vercel = "^0.14.2"
pandas = "^1.5.3"
python-dateutil = "^2.8.2"
python-dotenv = "^1.0.0"
pytz = "^2022.7.1"
requests = "^2.28.2"
sqlite-utils = "^3.30"
tabulate = "^0.9.0"

[tool.poetry.group.dev.dependencies]
bandit = {extras = ["toml"], version = "^1.7.4"}
black = "^23.1.0"
isort = "^5.12.0"
mypy = "^1.0.1"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
responses = "^0.22.0"
ruff = "^0.0.252"
types-python-dateutil = "^2.8.19.8"
types-pytz = "^2022.7.1.2"
types-requests = "^2.28.11.15"
types-tabulate = "^0.9.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
librarian = "librarian.cli:cli"

[tool.ruff]
line-length = 80

[tool.black]
line-length = 80

[tool.isort]
profile = "black"

[tool.mypy]

[[tool.mypy.overrides]]
module = ["pandas"]
ignore_missing_imports = true
